--- a/templates/ATMs.html
+++ b/templates/ATMs.html
@@ -16,7 +16,7 @@
 
 <div id="banner">
 	<img src={% static 'atms/ATMs_1.png' %} alt="ATMs" title="ATMs" width="1055" height="191" />
-	<img  src={% static 'general/logout_1.png' %} width="140px" height="70px" alt="Logout" id="logout" onClick="window.location.href='Landing_page.html'">
+	{% include 'logout_button.html' %}
 </div>
 
 <div id="content">
