--- a/templates/goals.html
+++ b/templates/goals.html
@@ -21,7 +21,7 @@
 
 <div id="banner">
 <img src={% static 'goals/Goals_1.png' %} width="1055px" height="191px" alt="Goals Banner">
-<img  src={% static 'general/logout_1.png' %} width="140px" height="70px" alt="Logout" id="logout" onClick="window.location.href='Landing_page.html'">
+{% include 'logout_button.html' %}
 </div>
 
 <div id="content">
@@ -82,7 +82,7 @@ Bar RIGHTCLICK = auto-fill the corresponding From (goal) field.">
 <div id="overview">
 
 	<div class="winners">
-		<p class="heading">Achieved goal</p>
+		<!--<p class="heading">Achieved goal</p>
         {% for key,value in sorted_goals %}
         {% if value.reached %}
             <div class="winning_entry">
@@ -93,7 +93,7 @@ Bar RIGHTCLICK = auto-fill the corresponding From (goal) field.">
             </form>
             </div>
         {% endif %}
-    {% endfor %}
+    {% endfor %}-->
 	</div>
 
 </div>
