Parent\Child validation

--- a/templates/403.html
+++ b/templates/403.html
@@ -16,7 +16,8 @@
 <body>
 
 <div id="content">
-	<p>You're not logged in</p>
+	<p>You don't seem to have the permission to view this.</p>
+    <p>Login with another account?</p>
 	    	<form action ="." id="p_login" method="POST">
 
 
