Profile page templating work

--- a/templates/nav_bar.html
+++ b/templates/nav_bar.html
@@ -8,7 +8,7 @@
 <div id="nav_bar">
 <ul>
     <li> {% block nav-home %}<a href="{% url 'home' %}">Home</a>{% endblock %}</li>
-    <!--<li> <a href="index.html">Profile</a></li>-->
+    <li> {% block nav-profile %}<a href="{% url 'profile' %}">Profile</a>{% endblock %}</li>
     <li> {% block nav-account %}<a href="{% url 'account' %}">Accounts</a>{% endblock %}</li>
     <li> {% block nav-goals %}<a href="{% url 'goals' %}">Goals</a>{% endblock %}</li>
     <li> {% block nav-collection %}<a href="{% url 'collection' %}">Collection</a>{% endblock %}</li>
